[package]
name = "bb8-libsql"
version = "0.1.1"
license = "MIT"
authors = [
  "Noah Fuller <nfuller7218@gmail.com>",
]
description = "A simple connection pooling manager for libsql using bb8."
repository = "https://github.com/NFuller721/bb88-libsql"
keywords = ["sqlite", "bb8", "pool"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
bb8 = "0.8.5"
dotenvy = "0.15.7"
libsql = "0.5.0"
tokio = "1.39.2"
